--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ulbi-advanced-backend",
+  "name": "advanced-backend-prc",
   "version": "0.0.1",
   "description": "",
   "author": "",
